[tool.poetry]
name = "cvsslib"
version = "1.0.0"
description = "CVSS 2/3 utilities"
authors = ["Tom Forbes <tom@tomforb.es>"]
license = "GPL-3.0-or-later"
readme = "readme.md"
repository = "https://github.com/orf/cvsslib/"
classifiers = [
    'Framework :: Django',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
]

[tool.poetry.scripts]
cvss = 'cvsslib.command:main'

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
django-enumfields = "^2.0.0"
pytest-django = "^3.8.0"
django = "^3.0.4"
pytest-pythonpath = "^0.7.3"
pytest-xdist = "^1.31.0"
pytest-black = "^0.3.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
